# bazelcon-21

./: .bazelignore  .bazelrc  .bazelversion  .editorconfig  .gitignore  .yarnrc  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  package.json  profile.json
bazel/: constants.bzl  utils.bzl
bazel/rules/: BUILD.bazel  angular_cli.bzl  history_server.bzl  http_server.bzl  jest_test.bzl  nextjs-bazel-entry.js  nextjs.bzl  parcel.bzl  snowpack-bazel-entry.js  snowpack.bzl  swc.bzl  typecheck.bzl  vite.bzl  vue.bzl  webpack_cli.bzl
bazel/workspace/: BUILD.bazel  container_pull.bzl  deps.bzl  docker_deps.bzl  image_digests.bzl  js_deps.bzl  repositories.bzl  stamp_vars.sh  yarn-postinstall.sh
examples/angular-cli/: .gitignore  BUILD.bazel  angular.json  chdir.js  karma.conf.js  package.json  tsconfig.app.json  tslint.json
examples/angular-cli/e2e/: protractor.conf.js
examples/angular-cli/e2e/src/: app.e2e-spec.ts
examples/angular-cli/src/app/: hero.service.ts
examples/angular-cli/src/app/dashboard/: dashboard.component.spec.ts
examples/angular-cli/src/app/hero-detail/: hero-detail.component.html
examples/angular-cli/src/app/heroes/: heroes.component.ts
examples/common/: postinstall.sh  preinstall.sh
examples/jest/: BUILD.bazel  README.md  jest.config.js  package.json
examples/jest/src/: controller.js  index.js  router.js  service.js
examples/jest/test/: controller.test.js  index.test.js  router.test.js  service.test.js
examples/nestjs/: .swcrc  BUILD.bazel  README.md  package.json
examples/nextjs/: .gitignore  BUILD.bazel  README.md  package.json
examples/nextjs/components/: layout.js
examples/nextjs/pages/: index.js
examples/nextjs/posts/: pre-rendering.md  ssg-ssr.md
examples/parcel/: .gitignore  BUILD.bazel  README.md  index.html  package.json
examples/parcel/src/: styles.scss
examples/parcel/src/scss/: _base.scss
examples/react/: .swcrc-compile  BUILD.bazel  package.json  spack-bazel-entry.js  spack.config.js  tsconfig.json
examples/react/src/: App.ts  Main.tsx
examples/snowpack/: BUILD.bazel  README.md  package.json  snowpack-bazel-entry.js  snowpack.config.js
examples/snowpack/public/: index.html
examples/snowpack/src/: App.css
examples/vite/: BUILD.bazel  README.md  package.json
examples/vue/: .prettierrc  BUILD.bazel  README.md  package.json  vue.config.js
examples/vue/public/: index.html
examples/vue/src/: App.vue  i18n.js  main.js
examples/vue/src/assets/scss/: _configurations.scss  _core.scss
examples/vue/src/components/common/Bookmarks/: Bookmarks.vue
examples/vue/src/components/common/Skeleton/: Skeleton.vue
examples/vue/src/components/common/SubscribeCategory/: SubscribeCategory.vue
examples/vue/src/directives/: backgroundImageLazyLoad.js
examples/vue/src/pages/category/: Category.vue  routerWatcher.js
examples/vue/src/pages/home/: Home.vue
examples/vue/src/services/: BaseApiService.js
examples/vue/src/translations/: ru.json
examples/vue/src/utils/: formatDate.js
examples/webpack-cli/: BUILD.bazel  LICENSE.md  README.md  env.config.js  package.json  tsconfig.json
examples/webpack-cli/src/: App.ts  Main.tsx
examples/webpack-cli/src/assets/stylesheets/: app.scss
examples/webpack-cli/src/components/: Hello.tsx
tools/: bazel
