load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//bazel/rules:jest_test.bzl", "jest_test")

# Run jest test
jest_test(
    name = "test",
    data = glob(["test/**/*"]) + [
        ":sources",
        "jest.config.js",
        "@npm//:node_modules",
    ],
)

# Run the server
nodejs_binary(
    name = "server",
    data = [
        ":sources",
        "@npm//:node_modules",
    ],
    entry_point = "src/index.js",
)

# Convienience target
filegroup(
    name = "sources",
    srcs = glob([
        "src/**/*",
    ]),
)
