load("//bazel/rules:history_server.bzl", "history_server")
load("//bazel/rules:snowpack.bzl", "snowpack_build")

# Build the site with next.js
snowpack_build(
    name = "dist",
    data = [
        ":sources",
        "@npm//:node_modules",
    ],
)

# Serve the site with history-server
history_server(
    name = "serve",
    port = 8080,
    root = ":dist",
)

# Convienience target
filegroup(
    name = "sources",
    srcs = glob([
        "src/**/*",
        "public/**/*",
    ]) + [
        "snowpack.config.js",
    ],
)
